<resources>
    <string name="app_name">Scheduler</string>

    <!-- list fragment titles -->
    <string name="to_do">To-Do</string>
    <string name="exams">Exams</string>
    <string name="assignments">Assignments</string>
    <string name="course">Course</string>

    <!-- action titles -->
    <string name="close">X</string>
    <string name="add">Add</string>
    <string name="back">&lt;</string>

    <!-- variable titles -->
    <string name="exam_name">Exam Name</string>
    <string name="time">Time</string>
    <string name="due_date">Due Date (MM/DD/YYYY)</string>
    <string name="assignment">Assignment</string>
    <string name="exam_date">Exam Date (MM/DD/YYYY)</string>
    <string name="location">Location</string>
    <string name="task">Task</string>
    <string name="class_name">Class Name</string>
    <string name="instructor_input">Instructor</string>
    <string name="time_class_input">Time</string>
    <string name="courses">Courses</string>
    <string name="list">List</string>
    <string name="course_dis">Course:</string>
    <string name="assignment_disp">Assignment:</string>
    <string name="due_date_disp">Due Date:</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
</resources>