<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_due_date"
        android:title="@string/due_date" />

    <item
        android:id="@+id/menu_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/course" />

    <item
        android:id="@+id/menu_assignments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/assignments" />

    <item
        android:id="@+id/menu_exams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/exams" />

    <item
        android:id="@+id/menu_to_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/to_do" />
</menu>
