<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/assign_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_dis" />

        <TextView
            android:id="@+id/assign_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assignment_disp" />

        <TextView
            android:id="@+id/assign_due"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date_disp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:src="@android:drawable/ic_menu_delete" />
    </LinearLayout>

</LinearLayout>