<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".AddExamFragment">

    <EditText
        android:id="@+id/exam_name_input"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:autofillHints="@string/exam_name"
        android:ems="10"
        android:hint="@string/exam_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/exam_date_input"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/exam_date"
        android:ems="10"
        android:hint="@string/exam_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/exam_time"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/time"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="text" />

    <EditText
        android:id="@+id/exam_location_input"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/location"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="text" />
</LinearLayout>