<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="340dp"
    android:layout_height="470dp"
    android:layout_gravity="center"
    android:background="@color/popup_color"
    android:orientation="vertical"
    tools:context=".AssigmentsAddFragment">

    <Button
        android:id="@+id/btn_back3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="<"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tv_course"
            android:layout_width="68dp"
            android:layout_height="27dp"
            android:text="@string/course"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"/>

        <Spinner
            android:id="@+id/class_dropdown"
            android:layout_width="200dp"
            android:layout_height="50dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/assignment_input"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/assignment"
        android:inputType="text" />

    <EditText
        android:id="@+id/Due_date_input"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/due_date"
        android:inputType="date" />

    <Button
        android:id="@+id/btn_add3"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text="@string/add" />

</LinearLayout>