<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".AddAssignmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_course"
            android:layout_width="68dp"
            android:layout_height="27dp"
            android:layout_marginEnd="8dp"
            android:text="@string/course"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/class_dropdown"
            android:layout_width="200dp"
            android:layout_height="50dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/assignment_input"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/assignment"
        android:ems="10"
        android:hint="@string/assignment"
        android:inputType="text" />

    <EditText
        android:id="@+id/Due_date_input"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/due_date"
        android:ems="10"
        android:hint="@string/due_date"
        android:inputType="date" />

</LinearLayout>