<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/cardBackground"
    tools:context=".courseCard"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E1C3C3"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/class_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/class_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/section_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Section"
                    android:paddingLeft="4dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/instructor_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instructor_input" />

            <TextView
                android:id="@+id/day_of_week_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Days of Week" />

            <TextView
                android:id="@+id/time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_class_input" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/building_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Building" />

                <TextView
                    android:id="@+id/room_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Room"
                    android:paddingLeft="4dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="24dp"
            >

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/cardBackground"
                android:src="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/cardBackground"
                android:src="@android:drawable/ic_menu_delete" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>